--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "plaid": "^41.1.0",
     "playwright": "^1.58.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
