fix(ci): reset local changes before pulling
Ensures production always matches repo state by discarding any local
modifications before git pull. This prevents deploy failures when
changes are made directly on the server.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
         run: |
           export PATH=/home/ec2-user/.bun/bin:$PATH
           cd /var/www/Neon-Goals-Service
+          # Reset any local changes to ensure clean state from CI only
+          git reset --hard HEAD
+          git clean -fd
           git pull origin main
           bun install --frozen-lockfile
           bun run prisma:generate
